--- a/index.html
+++ b/index.html
@@ -335,9 +335,14 @@
 
 
 
-    <div class="row justify-content-center my-5">
-        <div class="col-6 text-center">
-            <h3>Let's connect, innovate, and create an experience together!</h3>
+    
+    <div class="section">
+        <div class="container">
+            <div class="row justify-content-center my-5">
+                <div class="col-6 text-center">
+                    <h3>Let's connect, innovate, and create an experience together!</h3>
+                </div>
+            </div>
         </div>
     </div>
 
