--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
             <div> <a href="javascript:void(0)" class="link"><i class="ti-mobile"></i> +254719516641</a>
              </div>
-            <div> <a href="javascript:void(0)" class="link"><i class="ti-email"></i> mutisya.antony@yahoo.com </a>
+            <div> <a href="javascript:void(0)" class="link"><i class="ti-email"></i> mutisya&#46antony&#64yahoo&#46com</a>
              </div>
             
 
