--- a/index.html
+++ b/index.html
@@ -375,6 +375,8 @@
              </div>
             <div> <a href="javascript:void(0)" class="link"><i class="ti-email"></i> mutisya&#46antony&#64yahoo&#46com</a>
              </div>
+            <div> <a href="https://www.linkedin.com/in/antony-mumo-mutisya" target="_blank" class="link">LinkedIn: Antony Mutisya</a>
+            </div>
             
 
 
