--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
                 </div>
             </form><!-- end of contact form -->
 
-            <div> <a href="javascript:void(0)" class="link"><i class="ti-mobile"></i> +254719516641</a>
+            <div> <a href="javascript:void(0)" class="link"><i class="ti-mobile"> Phone:</i> +254719516641</a>
              </div>
-            <div> <a href="javascript:void(0)" class="link"><i class="ti-email"></i> mutisya&#46antony&#64yahoo&#46com</a>
+            <div> <a href="javascript:void(0)" class="link"><i class="ti-email"> Mail:</i> mutisya&#46antony&#64yahoo&#46com</a>
              </div>
-            <div> <a href="https://www.linkedin.com/in/antony-mumo-mutisya" target="_blank" class="link">LinkedIn: Antony Mutisya</a>
+            <div> <a href="https://www.linkedin.com/in/antony-mumo-mutisya" target="_blank" class="link"><i class="ti-linkedin"> LinkedIn:</i> Antony Mutisya</a>
             </div>
             
 
