--- a/index.html
+++ b/index.html
@@ -169,6 +169,8 @@
         </div>
     </section><!-- end of service section -->
 
+
+
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
@@ -177,33 +179,33 @@
             <!-- row -->
             <div class="row">
                 <div class="col-md-4 border mb-5 shadow shadow-lg">
-                    <a href="https://www.splashproeddyg.com" target="_blank" class="portfolio-card">
-                        <img src="assets/imgs/eddygpic.png" class="portfolio-card-img"
+                    <a href="https://toshtony.github.io/RentalApp/" target="_blank" class="portfolio-card">
+                        <img src="assets/imgs/rentals-pic.png" class="portfolio-card-img"
                             alt="Tony">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>SplashPro</h5>
+                                <h4>MutanuRentals</h5>
                                     <p class="font-weight-normal">Category: Web Development</p>
                             </span>
                         </span>
                     </a>
 
-                    <p class="mt-4 fs-4 lead"><a href="https://www.splashproeddyg.com" class="border rounded-pill p-2" target="_blank">Visit Site</a></p>
+                    <p class="mt-4 fs-4 lead"><a href="https://toshtony.github.io/RentalApp/" class="border rounded-pill p-2" target="_blank">Visit Site</a></p>
 
                 </div>
                 <div class="col-md-4 border mb-5 shadow shadow-lg">
-                    <a href="https://www.bonniescuisine.com" target="_blank" class="portfolio-card">
-                        <img src="assets/imgs/bonniecuisine.png" class="portfolio-card-img"
+                    <a href="https://toshtony.github.io/Wangecis-Kitchen/" target="_blank" class="portfolio-card">
+                        <img src="assets/imgs/kitchen-pic.png" class="portfolio-card-img"
                         alt="Tony">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
-                                <h4>Bonnie's Cuisine</h5>
+                                <h4>Wangeci's Kitchen</h5>
                                     <p class="font-weight-normal">Category: Web Development</p>
                             </span>
                         </span>
                     </a>
 
-                    <p class="mt-4 fs-4 lead"><a href="https://www.bonniescuisine.com" class="border rounded-pill p-2" target="_blank">Visit Site</a></p>
+                    <p class="mt-4 fs-4 lead"><a href="https://toshtony.github.io/Wangecis-Kitchen/" class="border rounded-pill p-2" target="_blank">Visit Site</a></p>
 
                 </div>
                 <div class="col-md-4 border mb-5 shadow shadow-lg">
