--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <!-- contact section -->
     <section class="section" id="contact">
         <div class="container text-center">
-            <p class="section-subtitle">How can you communicate?</p>
+            <p class="section-subtitle">Get in touch with me!</p>
             <h6 class="section-title mb-5">Contact Me</h6>
             <!-- contact form -->
             <form action="" class="contact-form col-md-10 col-lg-8 m-auto">
