--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                             <p class="testimonial-card-subtitle">Tony is one of the most engaging creatives to work with. His talents
                                 are unnmatched and it is always a great experience getting to work with him. Would highly recommend.
                             </p>
-                            <h6 class="testimonial-card-title">Jeremy Kenneth</h6>
+                            <h6 class="testimonial-card-title">Jeremy K.</h6>
                         </div>
                     </div>
                 </div>
@@ -327,7 +327,7 @@
                             <p class="testimonial-card-subtitle">Get in touch with Tony, he will help you realize your goals and guide 
                                 you along the digital road. His ideas are unnmatched!
                             </p>
-                            <h6 class="testimonial-card-title">Emily Musili</h6>
+                            <h6 class="testimonial-card-title">Emily M.</h6>
                         </div>
                     </div>
                 </div>
@@ -388,7 +388,7 @@
     <!-- footer -->
     <div class="container">
         <footer class="footer">
-            <p class="mb-0">Antony's Portfolio
+            <p class="mb-0">Antony's Portfolio ToshTony
                 <script>document.write(new Date().getFullYear())</script> &copy; 
             </p>
             <!-- <div class="social-links text-right m-auto ml-sm-auto">
