--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <span class="up">HI!</span>
                 <span class="down">I am Antony Mutisya</span>
             </h1>
-            <p class="header-subtitle">FULLSTACK SOFTWARE ENGINEER | GRAPHIC DESIGNER 
+            <p class="header-subtitle">FULL-STACK SOFTWARE DEVELOPER | GRAPHIC DESIGNER 
                 | ANIMATOR | PHOTOGRAPHER & VIDEOGRAPHER</p>
 
                 <!-- <button class="btn btn-primary" onclick="smoothScroll('about')">Visit My Works</button> -->
