--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p class="section-subtitle">Who Am I ?</p>
                     <h2 class="section-title mb-3">About Me</h2>
                     <p>
-                        Hey there, I'm Tony, a Tech-Creative Maverick!
+                        Hey there, I am Antony, a Tech-Creative Maverick!
                         <br>I am a multidimensional professional passionate about crafting captivating experiences.
                     </p>
                     <p>
@@ -101,7 +101,7 @@
     <section class="section" id="service">
         <div class="container text-center">
             <p class="section-subtitle">What I am Good at!</p>
-            <h6 class="section-title mb-6">My Skills</h6>
+            <h6 class="section-title mb-6">My Skillset</h6>
             <!-- row -->
             <div class="row">
                 
@@ -174,7 +174,7 @@
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
-            <p class="section-subtitle">Some of my most recent Works</p>
+            <p class="section-subtitle">Some of my latest workks</p>
             <h6 class="section-title mb-6">Portfolio</h6>
             <!-- row -->
             <div class="row">
