--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <span class="down">I am Antony Mutisya</span>
             </h1>
             <p class="header-subtitle">FULLSTACK SOFTWARE ENGINEER | GRAPHIC DESIGNER 
-                | ANIMATOR | PHOTOGRAPHER & VIDEOGRAPHER</p>
+                | 3D ANIMATOR | PHOTOGRAPHER & VIDEOGRAPHER</p>
 
                 <!-- <button class="btn btn-primary" onclick="smoothScroll('about')">Visit My Works</button> -->
                 <button class="btn btn-primary" onclick="scrollToPortfolio()">I'm Curious</button>
