--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 class="icon">
                             <h6 class="title">Animation</h6>
                             <p class="subtitle">"My passion for animation shines through in every project I undertake. With expertise in 2D and 3D animation,
-                                 I breathe life into characters and stories. Using tools such as Adobe After Effects, Blender, and Maya, I create captivating 
+                                 I breathe life into characters and stories. Using tools such as Adobe After Effects, and Blender, I create captivating 
                                  animations that entertain and engage audiences. 
                             </p>
                         </div>
@@ -164,7 +164,7 @@
                             <p class="subtitle">"I indulge in visual storytelling through photography and videography, capturing moments 
                                  and crafting compelling narratives, using tools
                                  like Adobe Premiere Pro, Final Cut Pro, and DaVinci Resolve. From cinematic shorts 
-                                 to captivating promotional videos, I bring creativity and to every project."
+                                 to captivating videos, I bring creativity and to every project."
 
                             </p>
                         </div>
