--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Antony's Porfolio Page">
     <link rel="icon" href="assets/imgs/tologo.png" type="image/x-icon" />
     <meta name="author" content="Tony">
-    <title>Antony's Porfolio</title>
+    <title>Antony | Full-Stack Software Developer</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + styles css -->
@@ -55,15 +55,10 @@
         <div class="header-content container">
             <h1 class="header-title">
                 <span class="up">HI!</span>
-                <span class="down">I am Antony Mutisya</span>
+                <span class="down">I am Antony!</span>
             </h1>
-<<<<<<< HEAD
-            <p class="header-subtitle">FULLSTACK SOFTWARE ENGINEER | GRAPHIC DESIGNER 
-                | 3D ANIMATOR | PHOTOGRAPHER & VIDEOGRAPHER</p>
-=======
             <p class="header-subtitle">FULL-STACK SOFTWARE DEVELOPER | GRAPHIC DESIGNER 
                 | ANIMATOR | PHOTOGRAPHER & VIDEOGRAPHER</p>
->>>>>>> 6e88910f745e2328c3c60774fd3b222685ff6497
 
                 <!-- <button class="btn btn-primary" onclick="smoothScroll('about')">Visit My Works</button> -->
                 <button class="btn btn-primary" onclick="scrollToPortfolio()">I'm Curious</button>
