--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a class="link" href="#portfolio">Portfolio</a>
                 </li>
                 <li class="item">
-                    <a class="link" href="#testmonial">Testmonial</a>
+                    <a class="link" href="#testmonial">Testimonials</a>
                 </li>
                 <li class="item">
                     <a class="link" href="#service">Skills</a>
@@ -174,7 +174,7 @@
     <!-- portfolio section -->
     <section class="section" id="portfolio">
         <div class="container text-center">
-            <p class="section-subtitle">Some of my latest workks</p>
+            <p class="section-subtitle">Some of my latest creations</p>
             <h6 class="section-title mb-6">Portfolio</h6>
             <!-- row -->
             <div class="row">
@@ -298,8 +298,8 @@
     <!-- testimonial section -->
     <section class="section" id="testmonial">
         <div class="container text-center">
-            <p class="section-subtitle">What Think Client About Me ?</p>
-            <h6 class="section-title mb-6">Testmonial</h6>
+            <p class="section-subtitle">Reviews from Clients</p>
+            <h6 class="section-title mb-6">Testimonials and Reviews</h6>
 
             <!-- row -->
             <div class="row">
